# notesound

./: .dockerignore  .gitignore  README.md  alembic.ini  docker-compose.local.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: main.py
app/api/: deps.py  routes.py
app/core/: config.py  db.py  logging.py
app/domain/: schemas.py
app/repositories/: jobs.py  models.py
app/services/music/: parser.py  synth.py
app/services/omr/: base.py  factory.py  homr_engine.py
app/services/preprocess/: pipeline.py
app/workers/: runner.py
bruno/Notesound/: bruno.json
bruno/Notesound/environments/: Local.bru  Prod.bru
bruno/Notesound/recognitions/: Create Recognition.bru  Get Artifact.bru  Get Recognition Audio.bru  Get Recognition Result.bru  Get Recognition Status.bru  Health.bru
docker/: Dockerfile  start-api.sh
samples/: README.md
samples/cases/img20260331140109-1/: expected.draft.json  observed.json
samples/cases/img20260331152449/: expected.draft.json  observed.json
samples/cases/img20260331181220/: expected.draft.json  observed.json  original.musicxml
samples/cases/img20260426224101/: expected.draft.json  observed.json
samples/cases/img20260426224114/: expected.draft.json  observed.json
samples/cases/img20260426224133/: expected.draft.json  observed.json  original.musicxml
scripts/: eval_samples.py  process_inbox.py
specs/: mvp-spec.md
tests/: conftest.py
tests/integration/: test_recognitions.py
tests/unit/: test_parser.py  test_preprocess.py  test_synth.py
(+48 files in other folders)
